# OpenGL-Study

./: CMakeLists.txt  Dependency.cmake  README.md  imgui.ini
imgui/: imgui_impl_glfw.cpp
shader/: simple.fs  simple.vs
src/: buffer.cpp  buffer.h  context.cpp  context.h  image.cpp  image.h  main.cpp  program.cpp  program.h  shader.cpp  shader.h  texture.cpp  texture.h  util.cpp  util.h  vertex_layout.cpp  vertex_layout.h
